--- a/index.html
+++ b/index.html
@@ -52,12 +52,35 @@
         </div>
 
 
+
+
+
         <div class="small-market-container">
+            <img src="images/about-img-1.png" alt="About" class="about-img">
+            <div class="market-container">
+                <span class="btc-holder">   <p2>BUY</p2>   <div class="crypto"> <img src="images/bitcoin-btc-logo.png" alt="BTC" class="currency">   <p>BTC/PLN</p> <img src="images/down4-512.png" alt="open" class="roll-down"> </div>  <p3>SELL</p3>   </span>
+                <input type="number" placeholder="VALUE: 1.000000000" class="value">
+                <div class="price-holder">256.07 PLN</div>
+                <button class="continue">CONTINUE</button>
+
+                <p4>Need some help? <a href="#">Ask our helpdesk!</a></p4>
+            </div>
+
             
         </div>
+        <div class="wave-1"><img src="images/wave(1).svg"></div>
 
+        <div class="about-us">
+            <div class="text-about-us">
+                <h2><b>NEW TO CRYPTOCURRENCY?<br>NO PROBLEM.</b>OUR TEAM WILL <br> HELP YOU!</h2>
+                <p5>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p5>
+                <button>LEARN MORE</button>
+            </div>
 
+            <img src="images/21.png" alt="ABOUT US">
+        </div>
 
+        <div class="wave-1"><img src="images/wave(2).svg"></div>
 
 
        
