--- a/index.html
+++ b/index.html
@@ -83,7 +83,51 @@
         <div class="wave-1"><img src="images/wave(2).svg"></div>
 
 
-       
+       <div class="help">
+        <h3>How can we help you<br> get started?</h3>
+        <div class="card-container">
+                <div class="card">
+                    <p6>Lorem ipsum is 
+                        placeholder text 
+                        commonly used in 
+                        the graphic, print, 
+                        and publishing 
+                        industries for 
+                        previewing layouts 
+                        and visual mockups.</p6>
+                        <button>READ MORE</button>
+                </div>
+                <div class="card">
+                    <p6>Lorem ipsum is 
+                        placeholder text 
+                        commonly used in 
+                        the graphic, print, 
+                        and publishing 
+                        industries for 
+                        previewing layouts 
+                        and visual mockups.</p6>
+                        <button>READ MORE</button>
+                </div>
+                <div class="card">
+                    <p6>Lorem ipsum is 
+                        placeholder text 
+                        commonly used in 
+                        the graphic, print, 
+                        and publishing 
+                        industries for 
+                        previewing layouts 
+                        and visual mockups.</p6>
+                        <button>READ MORE</button>
+                </div>
+        </div>
+
+        <div class="description-container">
+
+            
+        </div>
+
+
+       </div>
 
 
 
