--- a/index.html
+++ b/index.html
@@ -13,6 +13,43 @@
 
 
         <div class="landing">
+
+
+            <div class="hamburger-menu">
+
+                <span class="profile">
+                    <img src="images/user1.png" alt="User">
+                    <span class="nickname">User Nickname</span>
+                </span>
+
+                <span class="hamburger-link">
+                    <img src="images/home.png" class="ham-link-img">
+                    <a href="#">Link</a>
+                </span>
+                
+                <span class="hamburger-link">
+                    <img src="images/home.png" class="ham-link-img">
+                    <a href="#">Link</a>
+                </span>
+
+                <span class="hamburger-link">
+                    <img src="images/home.png" class="ham-link-img">
+                    <a href="#">Link</a>
+                </span>
+
+                <span class="hamburger-link">
+                    <img src="images/home.png" class="ham-link-img">
+                    <a href="#">Link</a>
+                </span>
+
+                <span class="hamburger-link">
+                    <img src="images/home.png" class="ham-link-img">
+                    <a href="#">Link</a>
+                </span>
+            </div>
+
+
+
              <header>
                  <img src="images/logo.png" alt="22bit.io" class="header-logo">
                 <button class="hamburger-button">
@@ -49,6 +86,9 @@
 
             </div>
 
+
+
+          
         </div>
 
 
