--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css" media="screen and (min-width: 1000px)">
+        <link rel="stylesheet" href="style_mobile.css" media="screen and (max-width: 1000px)">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     </head>
     <body>
