--- a/Register/index.html
+++ b/Register/index.html
@@ -95,7 +95,7 @@
                         <p1>By continuing I agree to the <a href="#">Terms of Service and Privacy Policy.</a></p1>
                     </span>
 
-                    <input type="submit" id="submit" value="WYŚLIJ">
+                    <input type="submit" id="submit" value="Register Account">
                     <a href="#" class="have-account">Already have an account? Log in!</a>
                 </form>
 
