--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
              <header>
-                 <img src="images/logo.png" alt="22bit.io" class="header-logo" data-aos="zoom-in">
+                 <img src="images/logo3.png" alt="22bit.io" class="header-logo" data-aos="zoom-in">
                 <button class="hamburger-button" data-aos="zoom-in" data-aos-delay="200">
                     <span class="first-span"></span>
                     <span class="second-span"></span>
