--- a/Register/index.html
+++ b/Register/index.html
@@ -53,7 +53,7 @@
 
 
              <header>
-                 <img src="images/logo3.png" alt="22bit.io" class="header-logo" data-aos="zoom-in">
+                 <img src="images/logo3.svg" alt="22bit.io" class="header-logo" data-aos="zoom-in">
                 <button class="hamburger-button" data-aos="zoom-in" data-aos-delay="200">
                     <span class="first-span"></span>
                     <span class="second-span"></span>
@@ -61,11 +61,11 @@
                 </button>   
 
                 <nav data-aos="zoom-in" data-aos-delay="500">
-                    <a href="#" class="nav-link">HOME</a>
-                    <a href="#" class="nav-link">CONTACT</a>
+                    <a href="../index.html" class="nav-link">HOME</a>
+                    <a href="../Contact/index.html" class="nav-link">CONTACT</a>
                     <a href="#" class="nav-link">ABOUT US</a>
                     <a href="#" class="nav-link">LOGIN</a>
-                    <a href="#" class="nav-link">SIGN UP</a>
+                    <a href="index.html" class="nav-link">SIGN UP</a>
                     <span class="underline-span"></span>
                 </nav>
             </header>
