--- a/Register/index.html
+++ b/Register/index.html
@@ -70,9 +70,9 @@
                 </nav>
             </header>
 
-        <div class="container">
-                <img src="images/undraw_crypto_portfolio_2jy5.svg" alt="REGISTER">
-                <form>
+        <div class="container" >
+                <img src="images/undraw_crypto_portfolio_2jy5.svg" alt="REGISTER" data-aos="zoom-in">
+                <form data-aos="zoom-in">
                     <h1>Sign Up</h1>
                     <label>Email Adress</label>
                     <input type="email" id="email-input" class="form-inputs">
