--- a/Login/index.html
+++ b/Login/index.html
@@ -72,9 +72,9 @@
 
             
             <div class="container">
-                <img src="images/btrtc.png" alt="BITCOIN" class="image">
+                <img src="images/btrtc.png" alt="BITCOIN" class="image" data-aos="zoom-in-right" data-aos-delay="650">
 
-                <div class="login-container">
+                <div class="login-container" data-aos="zoom-in-left" data-aos-delay="650">
 
                     <div class="info">
     
