--- a/Login/index.html
+++ b/Login/index.html
@@ -91,7 +91,7 @@
                         </div>
 
                         <div class="description">
-                            <img src="images/crypto.png" alt="CRYPTOCURRENCY" class="imgg">
+                            <img src="images/crypto.png" alt="CRYPTOCURRENCY" class="payment-img">
                             <h1>Over 30 currencies</h1>
                             <p1>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p1>
                         </div>
@@ -196,7 +196,7 @@ AOS.init({
   delay: 0, // values from 0 to 3000, with step 50ms
   duration: 400, // values from 0 to 3000, with step 50ms
   easing: 'ease', // default easing for AOS animations
-  once: false, // whether animation should happen only once - while scrolling down
+  once: true, // whether animation should happen only once - while scrolling down
   mirror: false, // whether elements should animate out while scrolling past them
   anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
 
