--- a/About Us/index.html
+++ b/About Us/index.html
@@ -64,7 +64,7 @@
                     <a href="../index.html" class="nav-link">HOME</a>
                     <a href="../Contact/index.html" class="nav-link">CONTACT</a>
                     <a href="index.html" class="nav-link">ABOUT US</a>
-                    <a href="#" class="nav-link">LOGIN</a>
+                    <a href="../Login/index.html" class="nav-link">LOGIN</a>
                     <a href="../Register/index.html" class="nav-link">SIGN UP</a>
                     <span class="underline-span"></span>
                 </nav>
