--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <nav data-aos="zoom-in" data-aos-delay="500">
                     <a href="index.html" class="nav-link">HOME</a>
                     <a href="/Contact/index.html" class="nav-link">CONTACT</a>
-                    <a href="#" class="nav-link">ABOUT US</a>
-                    <a href="#" class="nav-link">LOGIN</a>
+                    <a href="About Us/index.html" class="nav-link">ABOUT US</a>
+                    <a href="Login/index.html" class="nav-link">LOGIN</a>
                     <a href="/Register/index.html" class="nav-link">SIGN UP</a>
                     <span class="underline-span"></span>
                 </nav>
